--- a/application.yml
+++ b/application.yml
@@ -7,6 +7,17 @@ spring:
     url: jdbc:mysql://localhost:3306/publicactive
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+nacos:
+  config:
+    #Nacos地址
+    server-addr: 127.0.0.1:8848
+    #配置文件DATA ID名
+    data-id: test
+    #自动刷新 默认关闭
+    auto-refresh: true
+    #SpringBoot启动
+    bootstrap:
+      enable: true
 upload:
   directory:
     path: D:/DevelopTools/Code/uu_publice/src/main/resources/static/images
