--- a/application.yml
+++ b/application.yml
@@ -7,6 +7,10 @@ spring:
     username: root
     password: root
     virtual-host: / #虚拟主机
+    #消费预取限制
+    listener:
+      simple:
+        prefetch: 1 #每次只取一条消息，处理完再取
   datasource:
     password: root
     username: root
